# sketch

./: .gitignore  CMakeLists.txt  COPYING  build.sh  test.c
Include/: internal.h  sketch.h
Source/: CMakeLists.txt  sketch.c
Source/Darwin/: CMakeLists.txt  SketchApplicationDelegate.h  SketchApplicationDelegate.m  SketchView.m  SoftwareDrawable.c
Test/: CMakeLists.txt
Test/Image/: CMakeLists.txt  image.c
c/Include/: internal.h  sketch.h
c/Source/: sketch.c
c/Source/Darwin/: EventLoop.m  SketchApplicationDelegate.m  SketchView.h  SketchView.m  SoftwareDrawable.m
tools/darwin/: bundle.sh
tools/darwin/.app/Contents/: Info.plist
tools/darwin/Sketch.app/Contents/: Info.plist
tools/darwin/Sketch.app/Contents/MacOS/: test
